--- a/src/app/components/page3/page3.component.html
+++ b/src/app/components/page3/page3.component.html
@@ -1,19 +1,19 @@
 <p>page3 works!</p>
 
-<button (click)="getWordsFromService()">get words from service</button>
+<button (click)="getWordsFromService()" id="getWordsBtn">get words from service</button>
 
 <ng-container *ngIf="serviceWords.length">
-    <div *ngFor="let word of serviceWords">
+    <div *ngFor="let word of serviceWords" class="word-el">
         {{ word }}
     </div>
 </ng-container>
 
 <hr>
 
-<button (click)="getWordsFromComponets()">get words from component</button>
+<button (click)="getWordsFromComponets()" id="getWordsFromComponet">get words from component</button>
 
 <ng-container *ngIf="componentWords.length">
-    <div *ngFor="let word of componentWords">
+    <div *ngFor="let word of componentWords" class="word-elem">
         {{ word }}
     </div>
 </ng-container>
