click simulation tests ok

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 <nav>
-  <a routerLink="/page1">page1</a>
-  <a routerLink="/page2">page2</a>
-  <a routerLink="/page3">page3</a>
+  <a routerLink="/page1" id="link1">page1</a>
+  <a routerLink="/page2" id="link2">page2</a>
+  <a routerLink="/page3" id="link3">page3</a>
 </nav>
+
+<hr id="delimeter">
 
 <router-outlet></router-outlet>
