--- a/src/app/components/page3/page3.component.html
+++ b/src/app/components/page3/page3.component.html
@@ -1,19 +1,23 @@
 <p id="page3Greeting">page3 works!</p>
 
-<button (click)="getWordsFromService()" id="getWordsBtn">get words from service</button>
+<button (click)="getWordsFromService()" id="getWordsBtn">
+  get words from service
+</button>
 
-<ng-container *ngIf="serviceWords.length">
-    <div *ngFor="let word of serviceWords" class="word word-el">
-        {{ word }}
-    </div>
+<ng-container *ngIf="serviceWords?.length">
+  <div *ngFor="let word of serviceWords" class="word word-el">
+    {{ word }}
+  </div>
 </ng-container>
 
-<hr>
+<hr />
 
-<button (click)="getWordsFromComponets()" id="getWordsFromComponet">get words from component</button>
+<button (click)="getWordsFromComponets()" id="getWordsFromComponet">
+  get words from component
+</button>
 
-<ng-container *ngIf="componentWords.length">
-    <div *ngFor="let word of componentWords" class="word word-elem">
-        {{ word }}
-    </div>
+<ng-container *ngIf="componentWords?.length">
+  <div *ngFor="let word of componentWords" class="word word-elem">
+    {{ word }}
+  </div>
 </ng-container>
