--- a/src/app/components/page1/page1.component.html
+++ b/src/app/components/page1/page1.component.html
@@ -1,4 +1,6 @@
-<p>page1 works!</p>
+<p>
+  page1 works! <span id="title">{{ title }}</span>
+</p>
 
 <ng-container *ngIf="todos?.length">
   <div *ngFor="let todo of todos" class="todo-elem">
