--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,9 @@
   <a routerLink="/page1" id="link1">page1</a>
   <a routerLink="/page2" id="link2">page2</a>
   <a routerLink="/page3" id="link3">page3</a>
+  <span id="link33" (click)="go()">page3GO</span>
 </nav>
 
-<hr id="delimeter">
+<hr id="delimeter" />
 
 <router-outlet></router-outlet>
